# dynatrace-ai-agent-instrumentation-examples

./: .gitignore  .lycheeignore  AGENTS.md  CODEOWNERS  README.md  SKILL.md
.claude/commands/: update-audit-profiles.md
.github/: dependabot.yml  pull_request_template.md  renovate.json
.github/scripts/: compute-e2e-matrix.sh  notify-nightly.sh  pr-audit-comment.sh
.github/workflows/: check-links.yml  dashboard.yml  e2e.yml  renovate.yml
agents-md-integration/: README.md  agentic-instruction-retriever-workflow.workflow-template.yaml
ai-coding-agents/: README.md
ai-coding-agents/claude-code/: README.md  claude-code-monitoring-dashboard.json  test_connection.py
ai-coding-agents/gemini-cli/: README.md  collector.yaml  settings.json.example  test_connection.py
ai-coding-agents/github-copilot-sdk/: package-lock.json  package.json
ai-coding-agents/openai-codex/: README.md  codex-monitoring-dashboard.json  config.toml.example  requirements.txt  setup.sh
ai-coding-agents/openclaw/: .env.example  README.md  test_connection.py
ai-coding-agents/openclaw-observability-plugin/: .env.example  README.md  openclaw-llm-availability-slo.json  openclaw-observability-dashboard.json  setup.sh
ai-coding-agents/opencode/: .env.example  README.md  opencode-monitoring-dashboard.json  requirements.txt  setup.sh  test_connection.py
anthropic/oneagent/: .env.sample  Dockerfile  Makefile  README.md  anthropic_app.py  main.py  pyproject.toml  requirements.txt  server.py
aws-agent-sample/: README.md  dynatrace.py  main.py  server.py
aws-agent-sample/agent-core/: README.md
aws-agent-sample/strands-agents/: README.md
aws-agent-sdk/: dynatrace.py  pyproject.toml
aws-bedrock-agents/: README.md
aws-bedrock-agents/oneagent/: Makefile  README.md  dynatrace.py  main.py  otel-collector-config.yaml  pyproject.toml  server.py  travel_agent.py
aws-bedrock/oneagent/: .env.sample  Makefile  README.md  main.py  pyproject.toml  requirements.txt  server.py
aws-bedrock/openinference/: .env.sample  Makefile  README.md  main.py  otelcol-config.yaml  pyproject.toml  requirements.txt  server.py
aws-bedrock/opentelemetry/: .env.sample  Makefile  README.md  main.py  otel-collector-config.yaml  pyproject.toml  requirements.txt
aws-strands/oneagent/: Makefile  README.md  main.py  (+3 more)
aws-strands/opentelemetry/: Makefile  README.md  dynatrace.py  main.py  openpipeline-strands.yaml  otel-collector-config.yaml  pyproject.toml
aws_bedrock_tracing_example/: README.md  converse.py  guard_rail_metrics.py  invoke.py  main.py  requirements.txt
claude-code/: .env.example  README.md  setup.sh
copilot-studio/: README.md  copilot-studio-ui.md  copilot-studio_performace.md
crewai/: CrewAI Observability.json  README.md  collector.config.yaml  requirements.txt
gemini-cli/: .env.example  README.md  activate.sh  gemini-cli-monitoring-dashboard.json
github-copilot-sdk/: .env.example  GitHub Copilot SDK - AI Observability.json  README.md  package-lock.json  package.json
google-adk-sample/: .env.example  README.md
google-adk/opentelemetry/: .env.sample  Makefile  README.md  __init__.py  agent.py  app.py  pyproject.toml
google-adk/opentelemetry/sub_agents/academic_newresearch/: __init__.py  agent.py
google-adk/opentelemetry/sub_agents/academic_websearch/: __init__.py  agent.py
litellm-gateway-and-fastapi/: README.md
litellm/opentelemetry/litellm-gateway-with-instrumentation/: README.md  basic.py  call_models.http  pyproject.toml  requirements.txt
mcp/: README.md
microsoft-agent-framework/opentelemetry/: .env.sample  Makefile  README.md  app.py  pyproject.toml  requirements.txt
openai-agent-sample/: README.md
openai-codex/: .env.example  README.md  codex-monitoring-dashboard.json  coding-agent-monitoring-matrix.md  setup.sh  test_connection.py
openclaw/: README.md  openclaw-monitoring-dashboard.json  requirements.txt  setup.sh
openinference/: Makefile  README.md  app.py  deploy-openpipeline.sh  openpipeline-openinference-dtctl.yaml  openpipeline-openinference.yaml  otel-collector-config.yaml  requirements.txt  setup-routing.sh
pydantic-ai/opentelemetry/: Makefile  README.md  pyproject.toml
pydantic-ai/opentelemetry/backend/: main.py  otel_setup.py  requirements.txt
pydantic-ai/opentelemetry/frontend/: index.html
real-user-monitoring-frontends/: .env_example  README.md
rum/opentelemetry/: .env_example  Makefile  README.md  pyproject.toml
rum/opentelemetry/backend/: main.py  otel_setup.py
rum/opentelemetry/frontend/: index.html
rum/opentelemetry/nextjs-frontend/: package-lock.json  package.json
rum/opentelemetry/nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
rum/opentelemetry/scripts/: browser_demo.py
(+227 files in other folders)
