[project]
name = "aws-bedrock-agents-oneagent"
version = "0.1.0"
description = "Personal Assistant Agent built on top of Bedrock AgentCore, auto-instrumented by Dynatrace OneAgent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore",
    "boto3",
    "langchain-aws",
    "langgraph",
    "ddgs",
    "oneagent-sdk",
    "fastapi",
    "uvicorn[standard]",
]
