[project]
name = "aws-bedrock-opentelemetry-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.0",
    "traceloop-sdk>=0.61.0",
    "opentelemetry-instrumentation-bedrock>=0.61.0",
    "opentelemetry-instrumentation-botocore>=0.61.0",
    "opentelemetry-instrumentation-requests>=0.61.0",
    "opentelemetry-instrumentation-asyncio>=0.61.0",
    "requests>=2.32.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
]
