[project]
name = "microsoft-agent-framework-opentelemetry-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "agent-framework",
    "agent-framework-openai",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "python-dotenv",
]

[tool.uv]
environments = ["sys_platform != 'win32'"]
prerelease = "allow"
