[project]
name = "pydantic-ai-opentelemetry-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv",
    "boto3",
    "openai>=1.58.0",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]
