[project]
name = "litellm-gateway-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.89.0",
    "traceloop-sdk>=0.61.0",
    "opentelemetry-sdk>=1.42.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.0",
    "opentelemetry-instrumentation-fastapi>=0.61.0",
    "opentelemetry-instrumentation-httpx>=0.61.0",
    "websockets>=12.0",
]
